@@ -1,5 +1,6 @@
-Changes in QMPlay2 build 15.08.04:
+Changes in QMPlay2 build 15.08.11:
 	- small fixes for Windows,
+	- MPRIS2 bugfix,
 
 Changes in QMPlay2 build 15.07.13:
 	- fixed problem from previous release with playing video (sometimes video plays at maximum speed),
